--- a/android/CrossPlatformClient/app/src/main/res/values/strings.xml
+++ b/android/CrossPlatformClient/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Client</string>
+    <string name="title_activity_simple_file_read">Simple FileRead</string>
 </resources>
